# argocd-webhook-trigger

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT
src/: main.rs
